2008-01-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (boundary): Be more precise in estimating the vertical
	space required to accommodate rotated tick labels on x and x2 axes.
	Bug #1879907

2008-01-25  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term_api.h src/graphics.c (do_plot) src/graph3d.c (do_3dplot):
	Bracket each individual plot within a figure by a pair of calls to
	term->layer(TERM_LAYER_BEFORE_PLOT) term->layer(TERM_LAYER_AFTER_PLOT).

	* term/svg.trm (SVG_layer): Use the notification to encapsulate each
	plot into an <a xlink:title="Plot #N"> ... </a>  context.
	SourceForge tracker ref #1359667

	* term/post.trm (PS_layer): Use the notification to insert comments
	before and after the code for each plot.

	* term/fig.trm (FIG_layer): Use the notification to wrap each plot
	as a separate compound object for later editing.
	SourceForge tracker ref #1683173

2008-01-25  Ethan A Merritt  <merritt@u.washington.edu>

	* src/help.c src/command.c:  The old compile option NO_GIH allowed
	bypassing gnuplot's internal help code on systems that have other help
	mechanisms (Windows, VMS). Clean this up so that it compiles correctly
	on all platforms, and make the unneeded internal help code conditional.

	* src/tabulate.c:  Handle plot style "with filledcurves".

	* src/datafile.c (df_open df_generate_pseudodata) docs/gnuplot.doc
	demo/heatmaps.dem:  Instead of trying to guess based on the plot type
	whether the user wants a one-dimensional set of samples or a 2D grid,
	split the pseudo- file name into two variants.
	'+' generates 1D (samples), '++' generates 2D (samples, isosamples).
	See #1872528  Peter Danenberg  <danenberg@users.sourceforge.net>

2008-01-23  Morten MacFly  <mortenmacfly@users.sourceforge.net>

	* term/post.trm (PS_open_prologue_file PS_dump_prologue_file
	PS_load_glyphlist) term/PostScript/prologues.h: Update built-in
	prologues to match the external ones. Prevent a segfault if the